k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-svc
spec:
  selector:
    app: spring-boot-app
  ports:
    - port: 8080
  type: NodePort
